--- a/css/Style1.css
+++ b/css/Style1.css
@@ -2,8 +2,8 @@ body {
     min-width: 500px;
     font-family: PTSans, Helvetica, Arial, sans-serif;
     font-size: 16px;
-    color: #333;
-    background-color: #F6F6F6;
+    color: black;
+    background-color: lightgray;
     margin: 0;
     padding: 0;
 }
@@ -13,7 +13,7 @@ body {
 }
 
 .header{
-    background-color: lightgray;
+    background-color: white;
 }
 
 .logo {
@@ -40,15 +40,14 @@ body {
     float: left;
     height: 60px;
     width: 52%;
-    margin: 30px 50px 0px 0px;
+    margin: 30px 70px 0px 0px;
     background-color: white;
-    border: solid lightgreen 1px;
     border-radius: 10px;
     position: relative;
+    box-shadow: inset 0px 0px 5px rgba(0,0,0,.3);
 }
 
 .rightHeader {
-    border: solid red;
     float: left;
     height: 60px;
     width: 300px;
@@ -57,21 +56,161 @@ body {
 
 .inputSearch  {
     border: none;
-    border-radius: 100px;
+    border-radius: 10px;
     height: 50px;
     width: 90%;
     text-indent: 15px;
-
+    margin: 5px 0 5px 5px;
 }
 
 .submitSearchBottom {
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: 0;
+    top: 0;
     height: 60px;
     width: 60px;
     float: right;
     border-radius: 10px;
     background: url("../Images/SearchButtom.png") no-repeat center;
     background-size: 30px;
+}
+
+.car_button {
+    width: 180px;
+    height: 100%;
+    float: left;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: inset -1px -1px 0px rgba(0,0,0,.2);
+    border: solid rgb(224,224,224) 1px;
+}
+
+
+.login_cell {
+    width: 90px;
+    border: solid rgb(224,224,224) 1px;
+    float: right;
+    padding: 7px 0px;
+    text-align: center;
+    color: black;
+    font-size: small;
+    background: white;
+}
+
+.entry_button {
+    border-bottom: none;
+    background-color: rgb(220,220,220);
+}
+
+.login_cell:hover {
+    background-color: rgb(220,220,220);
+}
+
+
+.catalog {
+    background-color: lightgreen;
+    border-radius: 5%;
+    text-align: center;
+    padding: 10px 0;
+    font-weight: bold;
+}
+.category_name {
+    background-color: lightgreen;
+    width: 100%;
+    font-weight: bold;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px 0;
+}
+
+.main-menu {
+    float: left;
+    margin-top:20px;
+    width: 225px;
+}
+.main-menu ul {
+    margin: 0;
+    padding: 0;
+}
+.main-menu li a{
+    display: block;
+    border-bottom: 1px solid lightgreen;
+    padding: 15px;
+    color: black;
+}
+.main-menu > ul > li {
+    position:relative;
+}
+.main-menu li ul {
+    position:absolute;
+    display: none;
+    top: 0;
+    left: 225px;
+    width: 200px;
+    background-color: white;
+    border: 1px solid lightgray;
+    border-left: 4px solid lightgray;
+}
+.main-menu > ul > li > a:hover {
+    background-color: lightgreen;
+}
+.main-menu > ul > li:hover ul{
+    display: block;
+}
+.main-menu > ul > li li:hover {
+    background-color: lightgreen;
+}
+
+li {
+    list-style: none;
+    display: block;
+}
+
+a {
+    text-decoration: none;
+}
+
+.main-part {
+    float: right;
+    width: 900px;
+    border: solid red;
+    margin-top: 20px;
+}
+
+.HelloDiv {
+    margin-top: 10px;
+    text-align: center;
+    font-size: x-large;
+    font-weight: 200;
+    font-family: Arial;
+}
+
+.footer {
+}
+
+.central-part {
+    background-color: rgb(253,253,253);
+    box-shadow: inset 0px 0px 10px rgba(0,0,0,.2);
+}
+
+.main-window {
+    display: table;
+    margin: 0;
+    border-spacing: 20px;
+    border: dashed black;
+}
+
+.row {
+    display: block;
+    border-color: #B94A48;
+}
+.item {
+    float: left;
+    width: 250px;
+    display: block;
+    border: 1px solid #C09853;
+    text-align: center;
+    padding: 10px;
+    height: 180px;
+
 }
