--- a/css/Style1.css
+++ b/css/Style1.css
@@ -127,6 +127,7 @@ body {
     float: left;
     margin-top:20px;
     width: 225px;
+    margin-right: 69px;
 }
 .main-menu ul {
     margin: 0;
@@ -171,7 +172,7 @@ a {
 }
 
 .main-part {
-    float: right;
+    float: left;
     width: 900px;
     border: solid red;
     margin-top: 20px;
@@ -201,16 +202,16 @@ a {
 }
 
 .row {
-    display: block;
+    display: inline-block;
     border-color: #B94A48;
 }
 .item {
     float: left;
-    width: 250px;
+    width: 256px;
     display: block;
     border: 1px solid #C09853;
     text-align: center;
     padding: 10px;
-    height: 180px;
+    height: 300px;
 
 }
