--- a/css/Style1.css
+++ b/css/Style1.css
@@ -89,7 +89,7 @@ body {
 }
 
 .ToCar:hover {
-    box-shadow: inset 0 0 15px rgba(163,255,42,.5);
+    box-shadow: inset 0 0 15px rgba(163,255,42,1);
 }
 
 .headCar {
@@ -225,7 +225,7 @@ a {
     text-align: center;
     padding: 10px;
     height: 400px;
-    margin-right: 4px;
+    margin: 0 4px 6px 0;
     color: black;
 }
 
