--- a/css/Style1.css
+++ b/css/Style1.css
@@ -21,7 +21,7 @@ body {
     width: 175px;
     display: inline-block;
     float: left;
-    margin: 20px 30px 20px 0px;
+    margin: 20px 30px 20px 0;
 }
 
 .layout-positioner {
@@ -39,18 +39,18 @@ body {
     float: left;
     height: 60px;
     width: 52%;
-    margin: 30px 70px 0px 0px;
+    margin: 30px 70px 0 0;
     background-color: white;
     border-radius: 10px;
     position: relative;
-    box-shadow: inset 0px 0px 5px rgba(0,0,0,.3);
+    box-shadow: inset 0 0 5px rgba(0,0,0,.3);
 }
 
 .rightHeader {
     float: left;
     height: 60px;
     width: 300px;
-    margin: 30px 0px 0px 0px;
+    margin: 30px 0 0 0;
 }
 
 .inputSearch  {
@@ -80,7 +80,7 @@ body {
     border-radius: 10px;
     text-indent: 50px;
     line-height: 60px;
-    box-shadow: inset -1px -1px 0px rgba(0,0,0,.2);
+    box-shadow: inset -1px -1px 0 rgba(0,0,0,.2);
     border: solid rgb(224,224,224) 1px;
     color: black;
     background: url("../Images/Car.png") no-repeat 15% 50%;
@@ -103,7 +103,7 @@ body {
     width: 90px;
     border: solid rgb(224,224,224) 1px;
     float: right;
-    padding: 7px 0px;
+    padding: 7px 0;
     text-align: center;
     color: black;
     font-size: small;
@@ -203,7 +203,7 @@ a {
 
 .central-part {
     background-color: rgb(243,243,243);
-    box-shadow: inset 0px 0px 10px rgba(0,0,0,.2);
+    box-shadow: inset 0 0 10px rgba(0,0,0,.2);
 }
 
 .main-window {
@@ -250,3 +250,37 @@ a {
     margin-bottom: 15px;
 }
 
+.Product-item {
+    width: 850px;
+    height: 150px;
+    margin-bottom: 5px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.Product-itemTable {
+    display: table;
+    border-collapse: collapse;
+}
+
+.Product-itemRow {
+    display: table-row;
+    border-bottom: solid lightgreen 1px;
+}
+
+.Product-itemRow:hover {
+    box-shadow: inset 0 2px 0 rgba(163,255,42,.4);
+}
+
+.product-Cell-image,.product-nameCell, .PriceCell, .Car-Cell   {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.image-div {
+    width: 150px;
+    height: 150px;
+}
