--- a/css/Style1.css
+++ b/css/Style1.css
@@ -239,8 +239,9 @@ a {
 .product-name {
     height: 60px;
     width: 90%;
-    margin: 15px 5%;
+    margin-top: 15px;
     color: black;
+    padding: 0 10px;
 }
 
 .Price {
@@ -344,7 +345,7 @@ img {
     border-radius: 10px 10px 0 0;
 }
 
-.product-tittle-name {
+.product-tittle-name, .DescMyCar{
     margin: 30px 0 0 0;
     font-size: 20px;
 }
@@ -357,3 +358,112 @@ img {
     box-shadow: inset 0 -2px 0 rgba(0, 0, 0, .2);
 }
 
+/* CarPage */
+
+.main-windowCar {
+    display: table;
+    margin: 15px 0 15px 0;
+    border-spacing: 2px;
+    width: 1196px;
+    border: solid gray 1px;
+}
+
+.PriceDiv {
+    font-size: 30px;
+    border: dashed black;
+    text-align: center;
+    margin: 0px 0 10px 40px;
+    width: 175px;
+}
+
+.image-divCar {
+    margin: 5px 0;
+}
+
+.AmountCell {
+    display: table-cell;
+    width: 350px;
+    padding: 10px 0;
+}
+
+.product-nameCar {
+    width: 60%;
+}
+
+.amount-product {
+    height: 38px;
+    width: 45px;
+    border: solid grey 1px;
+    border-radius: 5px;
+    box-shadow: none;
+    text-align: center;
+    font-size: 15px;
+}
+
+.AmountField {
+    margin-left: 20px;
+}
+
+.MPbutton {
+    color: white;
+    font-size: large;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    height: 38px;
+    width: 35px;
+}
+.Min-button {
+    background: lightseagreen;
+}
+
+.Plus-button {
+    background: lightgreen;
+}
+
+.Product-delete {
+    float: right;
+    height: 40px;
+    width: 35px;
+    background: white;
+    color: black;
+    font-size: large;
+    font-weight: bold;
+    text-align: center;
+    border: solid grey 1px;
+    margin-right: 8px;
+}
+
+.PriceDiv {
+    margin: 20px 0 10px 0;
+}
+
+.InTotal {
+    height: 65px;
+    font-size: 20px;
+    padding: 20px 0 0 820px;
+}
+
+.TotalPrice {
+    float: right;
+    font-size: 30px;
+    margin: 0px 110px 0px 0px;
+    width: 175px;
+}
+
+.submitOffer {
+    height: 50px;
+    width: 200px;
+    font-size: large;
+    float: right;
+    margin: 20px 200px 40px 0;
+    border: solid lightgreen 1px;
+    border-radius: 10px;
+    background-color: lightgreen;
+    box-shadow: inset -2px -2px 0px rgba(0, 0, 0, .2);
+
+}
+
+.submitOffer:hover {
+    box-shadow: inset 0 0px 10px rgba(0, 0, 0, .2);
+}
