--- a/css/main.css
+++ b/css/main.css
@@ -476,3 +476,84 @@ img {
     margin: 20px 0 20px 0;
     padding-left: 40px;
 }
+
+/* login_form */
+
+.page-tittle {
+    margin: 10px 0 0 0;
+    font-size: 20px;
+}
+
+.login_form .error-msg {
+    text-align: center;
+    font-size: 10pt;
+    border: 2px solid red;
+    padding: 0.5em;
+    border-radius: 5px;
+    background-color: lightpink;
+}
+
+.login_form input[type="submit"],
+.login_form input[type="reset"] {
+    font-size: 12pt;
+    padding: 0.3em 1em;
+    color: black;
+    background-color: lightgreen;
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    transition: all 0.5s ease;
+}
+
+.login_form input[type="submit"]:hover,
+.login_form input[type="reset"]:hover {
+    box-shadow: inset 0 0px 10px rgba(0, 0, 0, .2);
+    transition: all 0.5s ease;
+}
+
+.login_form {
+    width: 400px;
+}
+
+.login-row {
+    margin: 20px 0 20px 0;
+}
+
+.login_form label {
+    width: 10em;
+    display: inline-block;
+}
+
+.login_form span.required {
+    color: red;
+}
+
+.login_form input[type="text"],
+.login_form input[type="password"] {
+    font-size: 16pt;
+    width: 99%;
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    margin-top: 10px ;
+}
+
+.login_form input[type="text"]:focus,
+.login_form input[type="password"]:focus {
+    box-shadow: inset 0 0px 5px rgba(0, 0, 0, .2);
+}
+
+.bottom-login {
+    text-align: center;
+}
+
+
+.login-row a{
+    color: green;
+}
+
+.login-row a:hover{
+    text-decoration:underline;
+}
+
+.login_form input[type="submit"], .login_form input[type="reset"] {
+    width: 125px;
+}
