--- a/css/main.css
+++ b/css/main.css
@@ -35,11 +35,33 @@ body {
     display:table;
 }
 
+.login_positioner {
+    border: 1px solid lightgray;
+    width: 180px;
+    height: 60px;
+    margin-left: 266px;
+    text-align: center;
+    font-size: x-small;
+    border-radius: 5px;
+}
+
+.user {
+    font-size: small;
+    text-decoration: underline;
+}
+
+
+.car-positioner:after {
+    content:'';
+    clear:both;
+    display:table;
+}
+
 .search {
     float: left;
     height: 60px;
-    width: 52%;
-    margin: 30px 70px 0 0;
+    width: 45%;
+    margin: 30px 0 0 0;
     background-color: white;
     border-radius: 10px;
     position: relative;
@@ -48,9 +70,10 @@ body {
 
 .rightHeader {
     float: left;
-    height: 60px;
-    width: 300px;
+    height: 100px;
+    width: 440px;
     margin: 30px 0 0 0;
+    position: relative;
 }
 
 .inputSearch  {
@@ -88,21 +111,19 @@ body {
     margin-left: 40px;
 }
 
+.headCar {
+    float: left;
+    text-indent: 80px;
+
+}
+
 .ToCar:hover {
     box-shadow: inset 0 0 15px rgba(163,255,42,1);
 }
 
-.headCar {
-    float: left;
-    margin-left: 0;
-    text-indent: 80px;
-}
-
-
 .login_cell {
-    width: 90px;
+    width: 100%;
     border: solid rgb(224,224,224) 1px;
-    float: right;
     padding: 7px 0;
     text-align: center;
     color: black;
@@ -112,6 +133,18 @@ body {
 .entry_button {
     border-bottom: none;
     background-color: rgb(220,220,220);
+}
+
+.logout_button {
+    float: none;
+    margin: 5px 0 0 42px;
+    height: 15px;
+    padding: 2px;
+    width: 90px;
+}
+
+.entry-positioner {
+    border: none;
 }
 
 .login_cell:hover {
