--- a/css/main.css
+++ b/css/main.css
@@ -610,3 +610,7 @@ img {
 .error-field input[type="text"], .error-field input[type="password"]{
     border: solid lightcoral 2px;
 }
+
+.product-name a {
+    color: black;
+}
