Шаблон товаров привязан к бд
1) Изменил переход на страницы товара с помощью строки товара, с ссылки
на кнопку отправки формы
2) Шаблон товаров привязан к бд

--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,8 @@ a {
     width: 410px;
     margin-top: 15px;
     color: black;
-    padding: 0 10px;
+    padding: 0 20px;
+    text-align: left;
 }
 
 .Price {
@@ -614,4 +615,9 @@ img {
 
 .product-name a {
     color: black;
+}
+
+.hiddenButton {
+    background: none;
+    border: none;
 }
