--- a/css/main.css
+++ b/css/main.css
@@ -351,7 +351,7 @@ img {
 }
 
 .ToCarPP {
-    text-indent: 80px;
+    text-indent: 40px;
 }
 
 .ProductID {
@@ -674,5 +674,8 @@ img {
     vertical-align: baseline;
     padding-top: 10px;
     height: 50px;
+}
 
+.ProductInCar {
+    background-color: lightgreen;
 }
